prusti-tests/tests/verify/ui/ghost-constraints/invalid-trait-refinement-1.stderr
error: [Prusti: verification error] the method's precondition may not be a valid weakening of the trait's precondition.
  --> $DIR/invalid-trait-refinement-1.rs:16:1
   |
16 | #[extern_spec]
   | ^^^^^^^^^^^^^^
...
30 |     #[requires(self.x >= 15)]
   |                ^^^^^^^^^^^^
   |
   = help: The trait's precondition should imply the implemented method's precondition.
   = note: this error originates in the attribute macro `extern_spec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

